--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.29",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
     "@types/superagent": "^4.1.11",
+    "cheerio": "^1.0.0-rc.9",
     "superagent": "^6.1.0"
   }
 }
