--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev:build": "tsc -w",
-    "dev:start": "nodemon node ./build/crowller.js",
-    "dev": "concurrently npm:dev:*"
+    "dev:start": "nodemon node ./build/index.js",
+    "dev": "tsc && concurrently npm:dev:*"
   },
   "nodemonConfig": {
-    "ignore": ["data/*"]
+    "ignore": [
+      "data/*"
+    ]
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cheerio": "^0.22.29",
+    "@types/express": "^4.17.12",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
@@ -23,6 +26,7 @@
   "dependencies": {
     "@types/superagent": "^4.1.11",
     "cheerio": "^1.0.0-rc.9",
+    "express": "^4.17.1",
     "superagent": "^6.1.0"
   }
 }
