--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cheerio": "^0.22.29",
+    "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.12",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.7",
@@ -27,6 +28,7 @@
     "@types/superagent": "^4.1.11",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.9",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "superagent": "^6.1.0"
   }
