--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev:build": "tsc -w",
     "dev:start": "nodemon node ./build/index.js",
-    "dev": "tsc && concurrently npm:dev:*"
+    "dev": "tsc && concurrently npm:dev:*",
+    "test": "tsc && node ./build/controller/LoginController.js"
   },
   "nodemonConfig": {
     "ignore": [
@@ -30,6 +31,7 @@
     "cheerio": "^1.0.0-rc.9",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
     "superagent": "^6.1.0"
   }
 }
